task3/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gruppe8-tcc-ingress
  namespace: gruppe8-tcc
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: tcc.test
      http:
        paths:
          - path: /api/priority
            pathType: Prefix
            backend:
              service:
                name: gruppe8-tcc-priority-service
                port:
                  number: 80
          - path: /api/status
            pathType: Prefix
            backend:
              service:
                name: gruppe8-tcc-status-service
                port:
                  number: 80
